parser.output
State 0 conflicts: 3 shift/reduce
State 1 conflicts: 3 shift/reduce
State 6 conflicts: 1 shift/reduce


Grammar

    0 $accept: regex $end

    1 regex: regex '\n'
    2      | constitution

    3 constitution: constitution factor '+'
    4             | constitution factor '?'
    5             | constitution factor '*'
    6             | constitution factor '{' decimal '}'
    7             | factor
    8             | ε

    9 factor: '(' constitution ')'
   10       | '[' factor ']'
   11       | factor atomic
   12       | atomic

   13 decimal: decimal digit
   14        | digit

   15 atomic: 'a'

   16 digit: '0'
   17      | '1'
   18      | '2'
   19      | '3'
   20      | '4'
   21      | '5'
   22      | '6'
   23      | '7'
   24      | '8'
   25      | '9'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1
    '(' (40) 9
    ')' (41) 9
    '*' (42) 5
    '+' (43) 3
    '0' (48) 16
    '1' (49) 17
    '2' (50) 18
    '3' (51) 19
    '4' (52) 20
    '5' (53) 21
    '6' (54) 22
    '7' (55) 23
    '8' (56) 24
    '9' (57) 25
    '?' (63) 4
    '[' (91) 10
    ']' (93) 10
    'a' (97) 15
    '{' (123) 6
    '}' (125) 6
    error (256)


Nonterminals, with rules where they appear

    $accept (24)
        on left: 0
    regex <result> (25)
        on left: 1 2
        on right: 0 1
    constitution <result> (26)
        on left: 3 4 5 6 7 8
        on right: 2 3 4 5 6 9
    factor <result> (27)
        on left: 9 10 11 12
        on right: 3 4 5 6 7 10 11
    decimal <decimal> (28)
        on left: 13 14
        on right: 6 13
    atomic <result> (29)
        on left: 15
        on right: 11 12
    digit <decimal> (30)
        on left: 16 17 18 19 20 21 22 23 24 25
        on right: 13 14


State 0

    0 $accept: • regex $end

    '('  shift, and go to state 1
    '['  shift, and go to state 2
    'a'  shift, and go to state 3

    '('       [reduce using rule 8 (constitution)]
    '['       [reduce using rule 8 (constitution)]
    'a'       [reduce using rule 8 (constitution)]
    $default  reduce using rule 8 (constitution)

    regex         go to state 4
    constitution  go to state 5
    factor        go to state 6
    atomic        go to state 7


State 1

    9 factor: '(' • constitution ')'

    '('  shift, and go to state 1
    '['  shift, and go to state 2
    'a'  shift, and go to state 3

    '('       [reduce using rule 8 (constitution)]
    '['       [reduce using rule 8 (constitution)]
    'a'       [reduce using rule 8 (constitution)]
    $default  reduce using rule 8 (constitution)

    constitution  go to state 8
    factor        go to state 6
    atomic        go to state 7


State 2

   10 factor: '[' • factor ']'

    '('  shift, and go to state 1
    '['  shift, and go to state 2
    'a'  shift, and go to state 3

    factor  go to state 9
    atomic  go to state 7


State 3

   15 atomic: 'a' •

    $default  reduce using rule 15 (atomic)


State 4

    0 $accept: regex • $end
    1 regex: regex • '\n'

    $end  shift, and go to state 10
    '\n'  shift, and go to state 11


State 5

    2 regex: constitution •
    3 constitution: constitution • factor '+'
    4             | constitution • factor '?'
    5             | constitution • factor '*'
    6             | constitution • factor '{' decimal '}'

    '('  shift, and go to state 1
    '['  shift, and go to state 2
    'a'  shift, and go to state 3

    $default  reduce using rule 2 (regex)

    factor  go to state 12
    atomic  go to state 7


State 6

    7 constitution: factor •
   11 factor: factor • atomic

    'a'  shift, and go to state 3

    'a'       [reduce using rule 7 (constitution)]
    $default  reduce using rule 7 (constitution)

    atomic  go to state 13


State 7

   12 factor: atomic •

    $default  reduce using rule 12 (factor)


State 8

    3 constitution: constitution • factor '+'
    4             | constitution • factor '?'
    5             | constitution • factor '*'
    6             | constitution • factor '{' decimal '}'
    9 factor: '(' constitution • ')'

    '('  shift, and go to state 1
    ')'  shift, and go to state 14
    '['  shift, and go to state 2
    'a'  shift, and go to state 3

    factor  go to state 12
    atomic  go to state 7


State 9

   10 factor: '[' factor • ']'
   11       | factor • atomic

    ']'  shift, and go to state 15
    'a'  shift, and go to state 3

    atomic  go to state 13


State 10

    0 $accept: regex $end •

    $default  accept


State 11

    1 regex: regex '\n' •

    $default  reduce using rule 1 (regex)


State 12

    3 constitution: constitution factor • '+'
    4             | constitution factor • '?'
    5             | constitution factor • '*'
    6             | constitution factor • '{' decimal '}'
   11 factor: factor • atomic

    '+'  shift, and go to state 16
    '?'  shift, and go to state 17
    '*'  shift, and go to state 18
    '{'  shift, and go to state 19
    'a'  shift, and go to state 3

    atomic  go to state 13


State 13

   11 factor: factor atomic •

    $default  reduce using rule 11 (factor)


State 14

    9 factor: '(' constitution ')' •

    $default  reduce using rule 9 (factor)


State 15

   10 factor: '[' factor ']' •

    $default  reduce using rule 10 (factor)


State 16

    3 constitution: constitution factor '+' •

    $default  reduce using rule 3 (constitution)


State 17

    4 constitution: constitution factor '?' •

    $default  reduce using rule 4 (constitution)


State 18

    5 constitution: constitution factor '*' •

    $default  reduce using rule 5 (constitution)


State 19

    6 constitution: constitution factor '{' • decimal '}'

    '0'  shift, and go to state 20
    '1'  shift, and go to state 21
    '2'  shift, and go to state 22
    '3'  shift, and go to state 23
    '4'  shift, and go to state 24
    '5'  shift, and go to state 25
    '6'  shift, and go to state 26
    '7'  shift, and go to state 27
    '8'  shift, and go to state 28
    '9'  shift, and go to state 29

    decimal  go to state 30
    digit    go to state 31


State 20

   16 digit: '0' •

    $default  reduce using rule 16 (digit)


State 21

   17 digit: '1' •

    $default  reduce using rule 17 (digit)


State 22

   18 digit: '2' •

    $default  reduce using rule 18 (digit)


State 23

   19 digit: '3' •

    $default  reduce using rule 19 (digit)


State 24

   20 digit: '4' •

    $default  reduce using rule 20 (digit)


State 25

   21 digit: '5' •

    $default  reduce using rule 21 (digit)


State 26

   22 digit: '6' •

    $default  reduce using rule 22 (digit)


State 27

   23 digit: '7' •

    $default  reduce using rule 23 (digit)


State 28

   24 digit: '8' •

    $default  reduce using rule 24 (digit)


State 29

   25 digit: '9' •

    $default  reduce using rule 25 (digit)


State 30

    6 constitution: constitution factor '{' decimal • '}'
   13 decimal: decimal • digit

    '}'  shift, and go to state 32
    '0'  shift, and go to state 20
    '1'  shift, and go to state 21
    '2'  shift, and go to state 22
    '3'  shift, and go to state 23
    '4'  shift, and go to state 24
    '5'  shift, and go to state 25
    '6'  shift, and go to state 26
    '7'  shift, and go to state 27
    '8'  shift, and go to state 28
    '9'  shift, and go to state 29

    digit  go to state 33


State 31

   14 decimal: digit •

    $default  reduce using rule 14 (decimal)


State 32

    6 constitution: constitution factor '{' decimal '}' •

    $default  reduce using rule 6 (constitution)


State 33

   13 decimal: decimal digit •

    $default  reduce using rule 13 (decimal)
